docs/api/qiskit/0.24/qiskit.dagcircuit.DAGNode.md
---
title: DAGNode
description: API reference for qiskit.dagcircuit.DAGNode
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.dagcircuit.DAGNode
---

<span id="qiskit-dagcircuit-dagnode" />

# qiskit.dagcircuit.DAGNode

<span id="qiskit.dagcircuit.DAGNode" />

`DAGNode(type=None, op=None, name=None, qargs=None, cargs=None, condition=None, wire=None, nid=- 1)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/dagcircuit/dagnode.py "view source code")

Object to represent the information at a node in the DAGCircuit.

It is used as the return value from \*\_nodes() functions and can be supplied to functions that take a node.

Create a node

### \_\_init\_\_

<span id="qiskit.dagcircuit.DAGNode.__init__" />

`__init__(type=None, op=None, name=None, qargs=None, cargs=None, condition=None, wire=None, nid=- 1)`

Create a node

## Methods

|                                                                                                                            |                                                                                             |
| -------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------- |
| [`__init__`](#qiskit.dagcircuit.DAGNode.__init__ "qiskit.dagcircuit.DAGNode.__init__")(\[type, op, name, qargs, cargs, …]) | Create a node                                                                               |
| [`semantic_eq`](#qiskit.dagcircuit.DAGNode.semantic_eq "qiskit.dagcircuit.DAGNode.semantic_eq")(node1, node2)              | Check if DAG nodes are considered equivalent, e.g., as a node\_match for nx.is\_isomorphic. |

## Attributes

|                                                                               |                                                                                |
| ----------------------------------------------------------------------------- | ------------------------------------------------------------------------------ |
| `cargs`                                                                       |                                                                                |
| `condition`                                                                   |                                                                                |
| `name`                                                                        |                                                                                |
| [`op`](#qiskit.dagcircuit.DAGNode.op "qiskit.dagcircuit.DAGNode.op")          | Returns the Instruction object corresponding to the op for the node, else None |
| [`qargs`](#qiskit.dagcircuit.DAGNode.qargs "qiskit.dagcircuit.DAGNode.qargs") | Returns list of Qubit, else an empty list.                                     |
| `sort_key`                                                                    |                                                                                |
| `type`                                                                        |                                                                                |
| [`wire`](#qiskit.dagcircuit.DAGNode.wire "qiskit.dagcircuit.DAGNode.wire")    | Returns the Bit object, else None.                                             |

### op

<span id="qiskit.dagcircuit.DAGNode.op" />

`property op`

Returns the Instruction object corresponding to the op for the node, else None

### qargs

<span id="qiskit.dagcircuit.DAGNode.qargs" />

`property qargs`

Returns list of Qubit, else an empty list.

### semantic\_eq

<span id="qiskit.dagcircuit.DAGNode.semantic_eq" />

`static semantic_eq(node1, node2)`

Check if DAG nodes are considered equivalent, e.g., as a node\_match for nx.is\_isomorphic.

**Parameters**

*   **node1** ([*DAGNode*](#qiskit.dagcircuit.DAGNode "qiskit.dagcircuit.DAGNode")) – A node to compare.
*   **node2** ([*DAGNode*](#qiskit.dagcircuit.DAGNode "qiskit.dagcircuit.DAGNode")) – The other node to compare.

**Returns**

If node1 == node2

**Return type**

Bool

### wire

<span id="qiskit.dagcircuit.DAGNode.wire" />

`property wire`

Returns the Bit object, else None.

